--- a/templates/map.html
+++ b/templates/map.html
@@ -5,7 +5,7 @@
     <title>Map</title>
     <link rel="stylesheet" href="../static/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?key={{ api_key }}&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{ api_key }}&libraries=places,geometry"></script>
     <script src="../static/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -41,25 +41,6 @@
 
             var availability_data = {{ availability| tojson }};
 
-            function findNearestStations(position) {
-                let distances = markers.map((marker, index) => {
-                    return {
-                        index: index,
-                        distance: google.maps.geometry.spherical.computeDistanceBetween(
-                            position,
-                            new google.maps.LatLng(marker.position.lat, marker.position.lng)
-                        ),
-
-                    };
-                });
-            
-                distances.sort((a, b) => a.distance - b.distance);
-            
-                let nearestStations = distances.slice(0, 5).map((item) => markers[item.index]);
-            
-                return nearestStations;
-            }
-
             function attachInfoWindow(marker, map, markerData) {
                 var infoWindow = new google.maps.InfoWindow({
                     content: '<div><strong>' + markerData.title + '</strong>' +
@@ -83,6 +64,7 @@
                     document.getElementById('side-bar-right').style.width= '350px';
                     document.getElementById('side-bar-right').style.display = 'flex';
                     document.getElementById('close-icon-right').style.display = 'block';
+                    
 
                     // Showing weather information
                     var weather_api = "https://api.open-meteo.com/v1/forecast?latitude="+
@@ -105,23 +87,145 @@
                             document.getElementById("weather-icon").innerHTML=weatherCode
                         }
                     };
->>>>>>> main
+                    xmlhttp.open("GET", weather_api, true);
+                    xmlhttp.send();
+                    // Showing station average chart
+                    google.charts.load('current', {'packages':['corechart']});
+                    google.charts.setOnLoadCallback(drawChart);
+    
+                    async function getData() {
+                        const url = '/availability/daily/'+markerData.number;
+                        const response = await fetch(url);
+                        const { data } = await response.json();
+                        return JSON.parse(data);
+                    }
+
+                    function calculateWeeklyAverage_bikes(data) {
+                        const weeklyData = [[0, 0, 0, 0, 0, 0, 0]];
+                        const daysOfWeek = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
+                        let currentWeek = weeklyData[0];
+                        let count = 0;
+                        let dayIndex = 0;
+
+                        for (let i = 0; i < data.length; i++) {
+                            const [dateString, availability] = data[i];
+                            const date = new Date(dateString);
+                            const dayOfWeek = daysOfWeek[date.getDay()];
+        
+                            if (dayOfWeek === 'Sun' && count > 0) {
+                                currentWeek[dayIndex] /= count;
+                                currentWeek = [0, 0, 0, 0, 0, 0, 0];
+                                weeklyData.push(currentWeek);
+                                count = 0;
+                                dayIndex = 0;
+                            }
+        
+                            currentWeek[dayIndex] += availability[0];
+                            count++;
+                            dayIndex++;
+                            dayIndex %= 7;
+                        }
+
+                        if (count > 0) {
+                            currentWeek[dayIndex] /= count;
+                        }
+
+                        return weeklyData.slice(1);
+                    }
+
+                    function calculateWeeklyAverage_bike_stands(data) {
+                        const weeklyData = [[0, 0, 0, 0, 0, 0, 0]];
+                        const daysOfWeek = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
+                        let currentWeek = weeklyData[0];
+                        let count = 0;
+                        let dayIndex = 0;
+
+                        for (let i = 0; i < data.length; i++) {
+                            const [dateString, availability] = data[i];
+                            const date = new Date(dateString);
+                            const dayOfWeek = daysOfWeek[date.getDay()];
+        
+                            if (dayOfWeek === 'Sun' && count > 0) {
+                                currentWeek[dayIndex] /= count;
+                                currentWeek = [0, 0, 0, 0, 0, 0, 0];
+                                weeklyData.push(currentWeek);
+                                count = 0;
+                                dayIndex = 0;
+                            }
+        
+                        currentWeek[dayIndex] += availability[1];
+                        count++;
+                        dayIndex++;
+                        dayIndex %= 7;
+                        }
+
+                        if (count > 0) {
+                            currentWeek[dayIndex] /= count;
+                        }
+
+                        return weeklyData.slice(1);
+                    }
+
+                    async function drawChart() {
+                        const data = await getData();
+                        const weeklyData_bikes = calculateWeeklyAverage_bikes(data);
+                        const weeklyData_bike_stands = calculateWeeklyAverage_bike_stands(data);
+      
+                        const ctx = document.getElementById('weekly-chart-bikes');
+                        const chart = new Chart(ctx, {
+                            type: 'bar',
+                            data: {
+                                labels: ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'],
+                                datasets: [{
+                                    label: 'Average Daily Available Bikes',
+                                    backgroundColor: 'rgba(255, 26, 104, 0.2)',
+                                    borderColor: 'rgba(255, 26, 104, 1)',
+                                    borderWidth: 1,
+                                    data: weeklyData_bikes.flat(),
+                                }]
+                            },
+                            options: {
+                                scales: {
+                                    yAxes: [{
+                                        ticks: {
+                                        beginAtZero: true,
+                                        }
+                                    }]
+                                }
+                            }
+                        });
+
+                        const ctx2 = document.getElementById('weekly-chart-bike_stands');
+                        const chart2 = new Chart(ctx2, {
+                            type: 'bar',
+                            data: {
+                                labels: ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'],
+                                datasets: [{
+                                    label: 'Average Daily Available Bike Stands',
+                                    backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                                    borderColor: 'rgba(54, 162, 235, 1)',
+                                    borderWidth: 1,
+                                    data: weeklyData_bike_stands.flat(),
+                                }]
+                            },
+                            options: {
+                                scales: {
+                                    yAxes: [{
+                                        ticks: {
+                                        beginAtZero: true,
+                                        }
+                                    }]
+                                }
+                            }
+                        });
+                    };
                 });
-            
-                distances.sort((a, b) => a.distance - b.distance);
-            
-                let nearestStations = distances.slice(0, 5).map((item) => markers[item.index]);
-            
-                return nearestStations;
             }
 
             const input = document.getElementById("pac-input");            
 
             const autocomplete = new google.maps.places.Autocomplete(input);
 
-            // Bind the map's bounds (viewport) property to the autocomplete object,
-            // so that the autocomplete requests use the current map bounds for the
-            // bounds option in the request.
             autocomplete.bindTo("bounds", map);
 
             autocomplete.addListener("place_changed", () => {
@@ -142,14 +246,49 @@
                 showNearestStations(place.geometry.location, availability_data);
                 document.getElementById('side-bar').style.display = 'block';
             });
-        };
-        
-        var canvas = document.getElementById("temperature-chart");
 
-        function printDebug(){
-            console.log("Passed");
-        }
-        
+            var canvas = document.getElementById("temperature-chart");
+
+            function printDebug(){console.log("Passed");}
+
+            function findNearestStations(position) {
+                let distances = markers.map((marker, index) => {
+                    return {
+                        index: index,
+                        distance: google.maps.geometry.spherical.computeDistanceBetween(
+                            position,
+                            new google.maps.LatLng(marker.position.lat, marker.position.lng)
+                        ),
+
+                    };
+                });
+            
+                distances.sort((a, b) => a.distance - b.distance);
+            
+                let nearestStations = distances.slice(0, 5).map((item) => markers[item.index]);
+            
+                return nearestStations;
+            }
+
+            function showNearestStations(location, availability_data) {
+                let nearestStations = findNearestStations(location);
+                console.log(nearestStations); // log nearest stations to the console
+                let sidebar = document.getElementById("side-bar");
+                sidebar.style.height = '70%';
+                document.getElementById('close-icon').style.display = 'block';
+                let nearestStationsDiv = document.getElementById("nearest-stations");
+                nearestStationsDiv.innerHTML = "<h3>Nearest Stations:</h3>";
+                nearestStations.forEach((station) => {
+                    let stationDiv = document.createElement("div");
+                    stationDiv.innerHTML = `<h4>${station.title}</h4>
+                        <p><i class="material-icons" title="Status">info</i>${station.status}</p>
+                        <p><i class="material-icons" title="Available Bikes">directions_bike</i>${station.available_bikes}</p>
+                        <p><i class="material-icons" title="Available Stands">directions_walk</i>${station.bike_stands}</p>
+                        <p><i class="material-icons" title="Banking">${station.banking ? 'check_circle' : 'cancel'}</i>${station.banking ? 'Yes' : 'No'}</p>`;
+                    nearestStationsDiv.appendChild(stationDiv);
+                });
+            }
+        };
     </script>
 </head>
 
