--- a/static/style.css
+++ b/static/style.css
@@ -20,11 +20,9 @@ body {
 
 #side-bar {
     z-index: 9;
-    width: 300px;
+    width: 400px;
     height: 40px;
     transition: 0.2s;
-    /* on marker click */
-    /* height: 100% */
     border: 0;
     border-radius: 2px;
     margin: 10px;
@@ -71,13 +69,6 @@ body {
 
 input:focus-visible {
     outline: none;
-}
-
-#side-info {
-    display: none;
-    height: 90%;
-    margin-top: 10px;
-    flex-direction: column;
 }
 
 #close-side {
@@ -127,6 +118,26 @@ input:focus-visible {
     width: 100%;
     display: flex;
     flex-direction: row;
+}
+
+#nearest-stations {
+    padding: 1rem;
+    font-size: 14px;
+    color: #333;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+#nearest-stations div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
+    margin-bottom: 10px;
+    transition: all 0.3s ease-in-out;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 #nearest-stations div:hover {
