--- a/templates/map.html
+++ b/templates/map.html
@@ -8,6 +8,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key={{ api_key }}&libraries=places"></script>
     <script src="../static/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+    {# <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> #}
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
     <script>
@@ -43,7 +44,7 @@
                 
                 contentString = '<div><strong>' + markerData.title + '</strong>' +
                         // show availability info in the hover window                                           
-                        '<div><img src="../static/weather/' + markerData.weathercode + '.png" height="20"></div>' +
+                        '<div><img src="../static/weather/' + markerData.weathercode + '.png" height="30"></div>' +
                         '<div>Status: ' + markerData.status + '</div>' +
                         '<div>Available stands: ' + markerData.bike_stands + '</div></div>'
                 
@@ -66,34 +67,11 @@
                     document.getElementById('side-bar-right').style.display = 'flex';
                     document.getElementById('close-icon-right').style.display = 'block';
 
-                    // Showing weather information
-                    var weather_api = "https://api.open-meteo.com/v1/forecast?latitude="+
-                        markerData.position.lat+
-                        "&longitude="+markerData.position.lng+
-                        "&hourly=temperature_2m,precipitation_probability,weathercode,windspeed_10m&current_weather=true"
-
-                    // Getting weather info
-                    var weatherCode;
-                    var xmlhttp = new XMLHttpRequest();
-
-                    xmlhttp.onreadystatechange = function() {
-                        if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {        
-                            //Parse the JSON data to a JavaScript variable. 
-                            parsedObj = JSON.parse(xmlhttp.responseText);  
-                            weatherCode = parsedObj.current_weather.weathercode;                            
-                            
-                            //print weatherCode to html
-                            // console.log(weatherCode);
-                            document.getElementById("weather-icon").innerHTML=weatherCode
-                        }
-                    };
-                    xmlhttp.open("GET", weather_api, true);
-                    xmlhttp.send();
-
-                    // Showing station average chart
                     google.charts.load('current', {'packages':['corechart']});
                     google.charts.setOnLoadCallback(drawChart);
-    
+                    google.charts.setOnLoadCallback(drawTemperature);
+
+                    // Functions to draw station average chart    
                     async function getData() {
                         const url = '/availability/daily/'+markerData.number;
                         const response = await fetch(url);
@@ -165,6 +143,8 @@
                             currentWeek[dayIndex] /= count;
                         }
 
+                        
+
                         return weeklyData.slice(1);
                     }
 
@@ -221,6 +201,121 @@
                             }
                         });
                     };
+
+                    // Make a request to the Open Meteo API to get the weather
+                    var weatherUrl = "https://api.open-meteo.com/v1/forecast?latitude="+markerData.position.lat+
+                        "&longitude="+markerData.position.lng+
+                        "&hourly=temperature_2m,precipitation_probability,weathercode,windspeed_10m"+
+                        "&daily=weathercode,temperature_2m_max,temperature_2m_min"+
+                        "&current_weather=true&timeformat=unixtime&timezone=Europe/London";
+
+                    // Extract the current weather from the JSON object
+                    fetch(weatherUrl)
+                    .then(response => response.json())
+                    .then(data => data.current_weather) 
+                    .then(data => {
+                        //User weather code to show the corresponding image
+                        var weatherCode = data.weathercode;
+                        console.log("Weather Code: " + weatherCode);
+                        var weatherCodeOut ='<img src="../static/weather/' + weatherCode + '.png" height="30">';
+                        document.getElementById('weather-icon').innerHTML = weatherCodeOut;
+
+                        //Show weather text (temperature, windspeed)
+                        var temperature = data.temperature;
+                        var windSpeed = data.windspeed;
+                        console.log("Temperature: " + temperature);
+                        var weatherTextOut = '<p>Temperature: '+temperature+'&#8451;</p>'+
+                                            '<p>Windspeed: '+windSpeed+' km/h</p>';
+                        document.getElementById('weather-text').innerHTML = weatherTextOut;
+                    }); 
+
+                    // Draw chart of Temperature, Precipitation, And Windspeed
+
+                    function drawTemperature() {
+                        // const data = await getWeather();
+                        fetch(weatherUrl)
+                        .then(response => response.json())
+                        .then(data => data.hourly) 
+                        .then(data => {
+                            // Get times from API
+                            var times = data.time;
+
+                            // Get temperature, precipitation, and windspeed
+                            var temperatures = data.temperature_2m;
+                            var precipitations = data.precipitation_probability;
+                            var windspeeds = data.windspeed_10m;
+
+                            // Headings for data to pass into google chart
+                            var tempChartData = [['Time','Temperature']];
+                            var preciChartData = [['Time','Precipitation']];
+                            var windChartData = [['Time','Wind Speed']];
+                            
+                            // Only show future data
+                            for(var i = 0; i < times.length; i++){
+                                if(times[i] >= Math.floor(Date.now() / 1000)){
+                                    const timeToDate = new Date(times[i] * 1000); // convert Unix timestamp to milliseconds and create Date object
+                                    // Add temperature to the temperature data array
+                                    var tempdatapoint = [timeToDate,temperatures[i]];
+                                    tempChartData.push(tempdatapoint);
+                                    // Add precipitation to the precipitations data array
+                                    var precidatapoint = [timeToDate,precipitations[i]];
+                                    preciChartData.push(precidatapoint);
+                                    // Add windspeed to the windspeed data array
+                                    var winddatapoint = [timeToDate,windspeeds[i]];
+                                    windChartData.push(winddatapoint);
+                                }
+                            }
+
+                            // Create google data tables from 3 data arrays
+                            var tempData = google.visualization.arrayToDataTable(tempChartData);
+                            var preciData = google.visualization.arrayToDataTable(preciChartData);
+                            var windData = google.visualization.arrayToDataTable(windChartData);
+
+                            // Format the charts
+                            var options = {
+                                chartArea: {
+                                    width: '85%'
+                                },
+                                hAxis: {
+                                    viewWindow: {
+                                        min: new Date(Date.now()),
+                                        max: new Date(Date.now()+24*60*60*1000)
+                                    },
+                                    gridlines: {
+                                        count: -1,
+                                        units: {
+                                            days: {format: ['MMM dd']},
+                                            hours: {format: ['HH:mm', 'ha']},
+                                            },
+                                        color: '#fff'
+                                    }
+                                },
+                                vAxis: {
+                                    minValue: 0,
+                                    gridlines: {
+                                        color: '#fff'
+                                    },
+                                    // title: 'C'
+                                },
+                                width:350,
+                                height:150,
+                                legend: 'none',
+                                series: {
+                                    0: { color: '#33cccc' }
+                                }
+                            };
+
+                            // Draw the charts
+                            var tempChart = new google.visualization.AreaChart(document.getElementById('temperature-chart'));
+                            tempChart.draw(tempData, options);
+
+                            var preciChart = new google.visualization.ColumnChart(document.getElementById('precipitation-chart'));
+                            preciChart.draw(preciData, options);
+
+                            var windChart = new google.visualization.LineChart(document.getElementById('wind-chart'));
+                            windChart.draw(windData, options);
+                        });                         
+                    } 
                 });
             }
 
@@ -252,7 +347,7 @@
             });
         };
         
-        var canvas = document.getElementById("temperature-chart");
+        // var canvas = document.getElementById("temperature-chart");
 
         function printDebug(){
             console.log("Passed");
@@ -286,13 +381,16 @@
         <div id="side-bar-info">
             <div id="weather-current">
                 <div id="weather-icon">Hello</div>
-                <div id="temperature"></div>
+                <div id="weather-text">
+                    <p>Temperature: 0&#8451;</p>
+                    <p>Windspeed: 100km/h</p>
+                </div>
                 <div id=""></div>
             </div>
             <div id="weather-hour">
-                <canvas id="temperature-chart"></canvas>
-                <canvas id="precipitation-chart"></canvas>
-                <canvas id="wind-chart"></canvas>
+                <div id="temperature-chart"></div>
+                <div id="precipitation-chart"></div>
+                <div id="wind-chart"></div>
             </div>
             <div id="station-history">
                 <h3 class="sidebar-label"><i class="sidebar-icon clock material-icons">access_time</i>Station History</h3>
