--- a/static/style.css
+++ b/static/style.css
@@ -101,16 +101,16 @@ input:focus-visible {
 
 #side-bar-right { 
     z-index: 1;
-    width: 0px;
-    /* display: none; */
+    /* width: 0px; */
+    display: none;
     /* height: 40px; */
     transition: 0.5s;
     height: 100%;
     border: 0;
-    padding: 0 0.5em;
+    padding: 0 0.5em 0 0;
     box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 5px 0 0 5px;
     flex-direction: row;
     position: absolute;
     right: 0;
@@ -130,10 +130,61 @@ input:focus-visible {
     margin: 10px 0;
 }
 
+#weather-icon{
+    padding: 0 10px;
+    height: 100%;
+    border-right: solid 1px lightgray;
+}
+
+#weather-text{
+    padding: 0 10px;
+}
+
 #weather-hour{
     width: 100%;
     display: flex;
     flex-direction: column;
+}
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: white;
+    outline: none;
+    cursor: pointer;
+    padding: 3px 0px;
+    margin: 3px 5px;
+    transition: 0.05s;
+    font: 12px Roboto, Arial, sans-serif;
+}
+
+#default-button{
+    border-bottom: #33CCCC 2px solid;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    border-bottom: #33CCCC 2px solid;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    border-bottom: #33CCCC 2px solid;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+}
+
+#temperature-chart{
+    display: block;
 }
 
 #station-history{
@@ -187,8 +238,4 @@ input:focus-visible {
     font-size: 18px;
     margin-bottom: 10px;
     margin: 0;
-}
-
-#weather_icon{
-    height: 100%;
 }
